--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "firebase": "^11.2.0",
     "pennmac-25": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
